--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ title			 : "StARLinG"
 title_separator          : "-"
 name                     : "StARLinG Lab"
 description              : "StARLinG Lab, an Artificial Intelligence Research Group at the University of Texas at Dallas."
-url                      : "https://github.dwelkie.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://dwelkie.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : dwelkie/github.io
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
