--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ name                     : "StARLinG Lab"
 description              : "StARLinG Lab, an Artificial Intelligence Research Group at the University of Texas at Dallas."
 url                      : "https://dwelkie.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : dwelkie/github.io
+repository               : dwelkie.github.io
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
